* Fix load data.

--- a/options.html
+++ b/options.html
@@ -41,8 +41,8 @@ function sPragma(){
    function restoreOptions(){
    var valueItemStorage1 = localStorage.getItem('dataPragma1');
    var valueItemStorage2 = localStorage.getItem('dataPragma2');
-   document.PragmaForm.PragmaValue1.value = valorItemStorage1;
-   document.PragmaForm.PragmaValue2.value = valorItemStorage2;
+   document.PragmaForm.PragmaValue1.value = valueItemStorage1;
+   document.PragmaForm.PragmaValue2.value = valueItemStorage2;
 }
 
    
