--- a/background.html
+++ b/background.html
@@ -5,10 +5,19 @@
 <script type="text/javascript">
 var Pragma1 = localStorage["dataPragma1"];
 var Pragma2 = localStorage["dataPragma2"];
-var All_Pragmas = Pragma1 + " " + Pragma2;
+var Pragma3 = localStorage["dataPragma3"];
+var Pragma4 = localStorage["dataPragma4"];
+var Pragma5 = localStorage["dataPragma5"];
+var Pragma6 = localStorage["dataPragma6"];
+var Pragma7 = localStorage["dataPragma7"];
+var Pragma8 = localStorage["dataPragma8"];
+var Pragma9 = localStorage["dataPragma9"];
+var Pragma10 = localStorage["dataPragma10"];
+var Pragma11 = localStorage["dataPragma11"];
+var All_Pragmas = Pragma1 + " " + Pragma2 + " " +  Pragma3 + " " +  Pragma4 + " " + Pragma5 + +  Pragma6 + " " + Pragma7 + " " +  Pragma8 + " " +  Pragma9 + " " + Pragma10 + " " + Pragma11;
 /* That is workaround, without it the extension is crash.*/
-if(Pragma1.length == 0){
-	var Pragma_t = "a"
+if(All_Pragmas.length == 0){
+	var All_Pragmas = "a"
 }
 
 
