--- a/options.html
+++ b/options.html
@@ -1,77 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Add header pragma</title>
-<script type="text/javascript">
-function sPragma(){
-	var field, num;
-	var All_Pragmas=""
-    var msgbox = 'Pragmas added:\n\n';
-    for(var i=0;i<pragmafields.length;i++){
-        field = pragmafields[i];
-		num = i+1;
-		if (!field.value){
-		
-		}
-		else
-		{ 
-			All_Pragmas = All_Pragmas + " " + field.value;
-        	localStorage.setItem('dataPragma'+num, field.value);
-			msgbox += ' '+field.value+'\n';
-		}
-    }
-
-    if (!All_Pragmas){
-        alert('Entry a value!');
-    }else{
-   	alert(msgbox);
-    }
-}
-
-
-
-function cPragma(){
-	for(var i=0;i<pragmafields.length;i++){
-		num = i+1;
-		localStorage.removeItem('dataPragma'+num);
-	}
-	alert('All values deleted');
-}
-
-
-function restoreOptions(){
-    window.pragmaform = document.getElementById('PragmaForm');
-    window.pragmafields = pragmaform.getElementsByClassName('pragma');
-    for(var i=0;i<pragmafields.length;i++){
-        pragmafields[i].value = localStorage.getItem('dataPragma'+(i+1));
-    }
-}
-</script>
+  <title>Pragma Header</title>
+  <link href="css/bootstrap.css" media="all" rel="stylesheet" type="text/css" />
+  <script src="js/libs/jquery-1.7.2.min.js" type="text/javascript"></script>
+  <script src="js/pragma_header.js" type="text/javascript"></script>
 </head>
-<body onload="restoreOptions()">
-<section>
+<body>
+  <div class="container">
+    <div class="row">        
+      <div class="span9">
+        <form accept-charset="UTF-8" class="form-horizontal" method="post" id="new_pragma">
+          <fieldset>
+            <legend>List of pragma values</legend> 
+            
+            <div class="control-group">
+              <label class="control-label" for="pragma_0">Value</label>
+              <div class="controls">
+                <input class="text_field" id="pragma_0" name="pragma_0" size="30" type="text" />                
+              </div>
+            </div>
+          </fieldset>
 
-    <form name="PragmaForm" action="#" id="PragmaForm">
+          <div class="control-group">              
+            <div class="controls">
+              <a href="#" id="add" class="btn">+</a>
+            </div>
+          </div>
 
-    <p><label>Add a "Pragma":</label><br> <input name="PragmaValue1" class="pragma"></p>
-    <p><label>Add a "Pragma":</label><br> <input name="PragmaValue2" class="pragma"></p>
-    <p><label>Add a "Pragma":</label><br> <input name="PragmaValue3" class="pragma"></p>
-    <p><label>Add a "Pragma":</label><br> <input name="PragmaValue4" class="pragma"></p>
-    <p><label>Add a "Pragma":</label><br> <input name="PragmaValue5" class="pragma"></p>
-    <p><label>Add a "Pragma":</label><br> <input name="PragmaValue6" class="pragma"></p>
-    <p><label>Add a "Pragma":</label><br> <input name="PragmaValue7" class="pragma"></p>
-    <p><label>Add a "Pragma":</label><br> <input name="PragmaValue8" class="pragma"></p>
-    <p><label>Add a "Pragma":</label><br> <input name="PragmaValue9" class="pragma"></p>
-    <p><label>Add a "Pragma":</label><br> <input name="PragmaValue10" class="pragma"></p>
-    <p><label>Add a "Pragma":</label><br> <input name="PragmaValue11" class="pragma"></p>
+          <div class="form-actions">              
+              <input id="save" class="btn btn-primary" name="commit" type="submit" value="Save" />
+              <a href="#" id="reset" class="btn">Reset</a>
+            </div>
+        </form>        
+      </div>
 
-	</form>
-
-    <p><input type="button" onclick="sPragma()" value="Save"></p>
-    <p><input type="button" onclick="cPragma()" value="Delete"></p>
-
-</section>
-
-
+      <div class="span3">
+        <h2>Pragma Headers</h2>
+        <p>
+          Pragma Header is a simple extension to added parameters in requests HTTP.
+        </p>
+        <p>
+          More details at <a href="https://github.com/fike/Pragma_header">Github</a>
+        </p>
+      </div>
+    </div>
+  </div>  
 </body>
 </html>
