--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,57 @@
+<!DOCTYPE html>
 <html>
 <head>
+  <title>Pragma Header</title>
+  <link href="css/bootstrap.css" media="all" rel="stylesheet" type="text/css" />
+  <script src="js/libs/jquery-1.7.2.min.js" type="text/javascript"></script>
+  <script src="js/pragma_header.js" type="text/javascript"></script>
 </head>
 <body>
-	<a href="options.html" target="_new">Settings</a>
+  <div class="container" style="width: 260px;">
+    <div class="row">       
+      <div class="span6">
+        <h2>Pragma Headers</h2>        
+      </div>
+
+      <div class="span6">        
+        <p>
+          <a href="options.html" target="_new">Settings...</a>
+        </p>
+
+        <form accept-charset="UTF-8" class="form-horizontal" method="post" id="new_pragma">
+          <fieldset>
+            <legend>List of pragma values</legend> 
+            
+            <div class="control-group">
+              <label class="control-label" for="pragma_0">Value</label>
+              <div class="controls">
+                <input class="text_field" id="pragma_0" name="pragma_0" size="30" type="text" autofocus="autofocus"/>                
+              </div>
+            </div>
+          </fieldset>
+
+          <div class="control-group">              
+            <div class="controls">
+              <a href="#" id="add" class="btn">+</a>
+            </div>
+          </div>
+
+          <div class="form-actions">              
+              <input id="save" class="btn btn-primary" name="commit" type="submit" value="Save" />
+              <a href="#" id="reset" class="btn">Reset</a>
+            </div>
+        </form>        
+      </div>      
+    </div>
+  </div>  
+</body>
+</html>
+
+
+
+
+
+
+  
 </body>
 </html>
