--- a/popup.html
+++ b/popup.html
@@ -7,12 +7,11 @@
   <script src="js/pragma_header.js" type="text/javascript"></script>
 </head>
 <body>
-  <div class="container" style="width: 260px;">
+  <div class="container" style="width: 250px;">
     <div class="row">       
       <div class="span6">
         <h2>Pragma Headers</h2>        
       </div>
-
       <div class="span6">        
         <p>
           <a href="options.html" target="_new">Settings...</a>
@@ -23,10 +22,12 @@
             <legend>List of pragma values</legend> 
             
             <div class="control-group">
+              <!-- Sample
               <label class="control-label" for="pragma_0">Value</label>
               <div class="controls">
-                <input class="text_field" id="pragma_0" name="pragma_0" size="30" type="text" autofocus="autofocus"/>                
+                <input class="text_field" id="pragma_0" name="pragma_0" size="30" type="text" autofocus="autofocus"/>             
               </div>
+              -->
             </div>
           </fieldset>
 
@@ -35,7 +36,7 @@
               <a href="#" id="add" class="btn">+</a>
             </div>
           </div>
-
+          
           <div class="form-actions">              
               <input id="save" class="btn btn-primary" name="commit" type="submit" value="Save" />
               <a href="#" id="reset" class="btn">Reset</a>
