--- a/options.html
+++ b/options.html
@@ -12,17 +12,15 @@
       <div class="span9">
         <form accept-charset="UTF-8" class="form-horizontal" method="post" id="new_pragma">
           <fieldset>
-            <legend>List of pragma values</legend>             
-            <div class="control-group">
-              <!-- Sample
-              <label class="control-label" for="pragma_0">Value</label>
-              <div class="controls">
-                <input class="text_field" id="pragma_0" name="pragma_0" size="30" type="text" />                
-              </div>
-            </div>
-            -->
+			  <legend>List of pragma values</legend>             
+			  <br /><p>You can insert values in a field. Use space between values.
+			  </p>
+			  <div class="control-group">
+              
           </fieldset>
-          
+
+   
+
           <div class="control-group">              
             <div class="controls">
               <a href="#" id="add" class="btn">+</a>
@@ -43,7 +41,8 @@
         </p>
         <p>
           More details at <a href="https://github.com/fike/Pragma_header">Github</a>
-        </p>
+		  </p>
+		 
       </div>
     </div>
   </div>  
